--- a/src/index.css
+++ b/src/index.css
@@ -137,7 +137,43 @@ html{
   font-size: 14px;
 }
 .desc{
+  overflow: hidden;
+    white-space: nowrap;
   font-size: 12px;
+}
+input#amount{
+  display: inline-block;
+  font-weight: bolder;
+  color: #263238;
+  font-size: 1.5rem;
+  height: 50px;
+  outline: none;
+}
+.dot{
+  position: absolute;
+  left: 40%;
+  font-weight: bolder;
+  color: #263238;
+  font-size: 1.5rem;
+  line-height: 2;
+}
+.personal-information .form-info  .amount{
+  position: absolute;
+  right: 5%;
+  display: inline-block;
+  height: 50px;
+  color: black;
+  font-size: 17px;
+  font-weight: 900;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  width: 25%;
+}
+.personal-information .form-info .amount p{
+  padding: 0;
+  line-height: 3;
+  margin: 0;
+  /* display: inline-block; */
 }
 /* .form-control {
   display: inline-block;
@@ -193,7 +229,7 @@ input:valid+span:after {
   border-radius: .6rem;
   font-family: 'Cairo', sans-serif !important;
   color: #f5f5f5;
-  border: none;
+  border: 1px solid var(--mainColor);
   margin-bottom: 1.3rem;
 }
 .button-main:hover{
@@ -211,7 +247,7 @@ input:valid+span:after {
   font-family: 'Cairo', sans-serif !important;
   color: var(--mainColor);
   border: 1px solid var(--mainColor);
-  margin-bottom: 1rem;
+  margin-bottom: 1.3rem;
 }
 /* 3.3- Geral Anchor Tage */
 a{
@@ -295,4 +331,11 @@ a:hover{
     transform: scale(1);
     -webkit-transform: scale(1);
   }
+}
+/* Error Message */
+.with-errors{
+  color: #ec4646;
+  width: 100%;
+  margin-top: 0.4rem;
+  font-size: 12px;
 }
